Updatded the credits in picture_scrolls.html. Updated the rifle_logo.png. Added more content and finished the Bow and Rifle Smithing Text tables in weapon_texts.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -946,7 +946,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080, Uteh, Oninomiru</span>
+                <span>LiuKang1080, Uteh, Oninomiru, Yakky</span>
                 <span class="bold-text">Nioh Community Discord Server: 
                     <a class="text-sky-400 hover:text-sky-600" href="https://discord.gg/pAH5U9mRBj" 
                     target="_blank" rel="noopener noreferrer">Here</a></span>
