--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -3379,6 +3379,203 @@
 	</section>
 
 
+	<!-- ========== ========== ========== ========== ==========
+    Bow Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="bow" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Bow Smithing Texts</h2>
+            <img src="./img/bow_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Fan-Piercing Bow -->
+				<tr class="bg-dark-gray-2">
+					<td>Fan-Piercing Bow</td>
+					<td>
+						<span>-</span>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Lost Sword (Dream Of The Strong)</a>
+					</td>
+				</tr>
+
+				<!-- Five-Man Bow -->
+				<tr class="">
+					<td>Five-Man Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Uminyudo</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">A Song To Calm The Storm</a>
+					</td>
+				</tr>
+
+				<!-- Hornthrust Bow -->
+				<tr class="bg-dark-gray-2">
+					<td>Hornthrust Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Marksman's Bow -->
+				<tr class="">
+					<td>Marksman's Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Urabe No Sutake</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Demon Slayers</a>
+					</td>
+				</tr>
+
+				<!-- Master Archer's Bow -->
+				<tr class="bg-dark-gray-2">
+					<td>Master Archer's Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Hidden Monsters Of Okehazama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Imagawa Diehard</a>
+					</td>
+				</tr>
+
+				<!-- Raishodo -->
+				<tr class="">
+					<td>Raishodo</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Nue</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shadows Creep In Kurama</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Darkness Brewing (Twilight Mission)</a>
+					</td>
+				</tr>
+
+				<!-- Ryomen Sukuna's Bow -->
+				<tr class="bg-dark-gray-2">
+					<td>Ryomen Sukuna's Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Sun Sets On Mt.Tenno</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Mountain Of The Dark Lord (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Restoring Harmony</a>
+					</td>
+				</tr>
+
+				<!-- Seer's Bow -->
+				<tr class="">
+					<td>Seer's Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Dawn Of The Demon</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Cradle Of The Demon (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Rivals Return</a>
+					</td>
+				</tr>
+
+				<!-- Tsunonotsuki Bow -->
+				<tr class="bg-dark-gray-2">
+					<td>Tsunonotsuki Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">In The Eye Of The Beholder</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+					</td>
+				</tr>
+
+				<!-- Warrior of the West Bow -->
+				<tr class="">
+					<td rowspan="2">Warrior of the West Bow</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Daidara-Bocchi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
+	<!-- ========== ========== ========== ========== ==========
+    Rifle Smithing Texts
+    ========== ========== ========== ========== ========== -->    
+    <section id="rifle" class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
+            2xl:max-w-section-width lg:px-16">
+
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Rifle Smithing Texts</h2>
+            <img src="./img/rifle_logo.png" alt="">
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Smithing Text</th>
+                    <th>Enemy</th>
+                    <th>Missions</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+				<!-- Ravenwing Rifle -->
+				<tr class="bg-dark-gray-2">
+					<td>Ravenwing Rifle</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Saika Magoichi</a>
+					</td>
+					<td>
+						<a class="text-sky-400 hover:text-sky-600" href="">Prevading Waters</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Third Word</a>
+					</td>
+				</tr>
+			</table>
+		</div>
+	</section>
+
+
     <!-- ========== ========== ========== ========== ==========
     Credits
     ========== ========== ========== ========== ========== -->
