Added more content to the Farming Graces section in floors.html.

--- a/nioh2/world/underworld/floors/floors.html
+++ b/nioh2/world/underworld/floors/floors.html
@@ -278,6 +278,20 @@
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Farming For Graces</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Specific Graces only drop on specific Floors of the Underworld. All 18
+                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal Graces</span>
+                are split into 3 Grace Pools (6 Graces in each pool). Only those certain Graces from that Grace pool will be
+                attached to the weapons, armors, and accessories that drop on that specific Floor. The tables below show which
+                Graces drop on which floor. You can view the full details of all of the Graces
+                <a class="text-sky-400 hover:text-sky-600" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/graces/graces.html#wise"
+                    target="_blank" rel="noopener noreferrer">here</a>.
+
+                Note <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]"> Grace of Oyamatsumi</span>
+                and <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]"> Grace of Shinatsuhiko</span>
+                can only drop from Floors 6 through 30 in The Depths of the Underworld.
+            </p>
+
             <div class="w-full px-4 flex flex-col items-center lg:grid xl:grid-cols-3 2xl:px-0 gap-6">
                 <!-- Grace Pool 1 -->
                 <div class="w-full mask rounded bg-dark-gray p-2 flex flex-col gap-4">
