Updated content in weapon_texts.html. Added armor_texts .html and .js files. Added the respective images for head gear and armor_set .png files.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -1153,10 +1153,11 @@
 				<tr class="">
 					<td rowspan="2">Weathered Bone & Bleached Twig</td>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Kamaitcahi</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Kamaitachi</a>
 					</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Mysterious One Night Castle</a><br><br>
+                        <a class="text-sky-400 hover:text-sky-600" href="">Blood On The Wind (Twilight Mission)</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">The High-Spirited Demon</a>
 					</td>
 				</tr>
@@ -2549,7 +2550,8 @@
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Mausoleum Of Evil</a><br><br>
 						<a class="text-sky-400 hover:text-sky-600" href="">Wings Of The Phoenix (Twilight Mission)</a><br><br>
-						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Calamity's Pulse</a><br><br>
+						<a class="text-sky-400 hover:text-sky-600" href="">The Revelry Ends</a>
 					</td>
 				</tr>
 
