Updated the HEad Gear Smithing Text table to alternate colors in armor_texts.html.

--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -242,7 +242,7 @@
     <section class="w-full my-12 flex flex-col items-center">
         <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
             <ol class="list-decimal list-inside text-xl text-sky-400">
-                <li><a class="hover:text-sky-600" href="javascript: headgear()">Headgear Smithing Texts</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: headgear()">Head Gear Smithing Texts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: armor_set()">Armor Set Smithing Texts</a></li>
                 <li><a class="hover:text-sky-600" href="javascript: credits()">Credits</a></li>
             </ol>
@@ -292,7 +292,7 @@
         <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
-            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Head Gear Texts</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Head Gear Smithing Texts</h2>
             <img src="./img/headgear.png" alt="">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -310,7 +310,7 @@
                 Table Data
                 ========== -->
                 <!-- Agyo Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Agyo Mask</td>
 					<td>
 						<span>-</span>
@@ -321,7 +321,7 @@
 				</tr>
 
                 <!-- Black Bear Fur Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Black Bear Fur Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Wakisaka Yasuharu (Seven Spears #1) (Spear weilding mini-boss sitting in tea room)</a>
@@ -332,7 +332,7 @@
 				</tr>
 
                 <!-- Black Fox Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Black Fox Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Onmyo Mage</a>
@@ -343,7 +343,7 @@
 				</tr>
 
                 <!-- Braided Straw Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Braided Straw Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Sengoku Hidehisa (Odachi weilding mini-boss at the end of the stage)</a>
@@ -354,7 +354,7 @@
 				</tr>
 
                 <!-- Coiled Snake Kabuto -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Coiled Snake Kabuto</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ryunojo: Give Dung Balls</a>
@@ -365,7 +365,7 @@
 				</tr>
 
                 <!-- Curious Crown Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Curious Crown Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ikeda Tsuneoki (Dual Swords weilding human before Tokichiro boss)</a>
@@ -376,7 +376,7 @@
 				</tr>
 
                 <!-- Demon God Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Demon God Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
@@ -387,7 +387,7 @@
 				</tr>
 
                 <!-- Devotional Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Devotional Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ranmaru Mori (Revenant)</a>
@@ -398,7 +398,7 @@
 				</tr>
 
                 <!-- Dokisai's Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Dokisai's Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Yamamoto Kansuke (Revenant)</a>
@@ -409,7 +409,7 @@
 				</tr>
 
                 <!-- Dragon Head Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Dragon Head Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Mori Nagayoshi (Spear weilding human in tent after getting Honda Tadakatsu as an ally)</a>
@@ -420,7 +420,7 @@
 				</tr>
 
                 <!-- Enenra Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Enenra Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Enenra</a>
@@ -433,7 +433,7 @@
 				</tr>
 
                 <!-- Female Demon Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Female Demon Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
@@ -444,7 +444,7 @@
 				</tr>
 
                 <!-- Golden Sun Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Golden Sun Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -455,7 +455,7 @@
 				</tr>
 
                 <!-- Horned Turban Kabuto -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Horned Turban Kabuto</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ryunojo: Give Dung Balls</a>
@@ -466,7 +466,7 @@
 				</tr>
 
                 <!-- Ichi-no-Tani Kabuto -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Ichi-no-Tani Kabuto</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Fukushima Masanori (Seven Spears #2) (Spear weilding mini-boss patroling the gate near Mumyo)</a>
@@ -477,7 +477,7 @@
 				</tr>
 
                 <!-- Kamaitachi Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Kamaitachi Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Kamaitachi</a>
@@ -490,7 +490,7 @@
 				</tr>
 
                 <!-- Kodama Bowl -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Kodama Bowl</td>
 					<td>
 						<span>-</span>
@@ -501,7 +501,7 @@
 				</tr>
 
                 <!-- Linked Ring Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Linked Ring Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Katagiri Katsumoto (Seven Spears #6) (Spear weilding mini-boss with red/black armor patroling a shrine)</a>
@@ -512,7 +512,7 @@
 				</tr>
 
                 <!-- Mount Fuji Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Mount Fuji Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Kato Yoshiaki (Seven Spears #3) (Dual Swords weilding mini-boss after Gozuki)</a>
@@ -523,7 +523,7 @@
 				</tr>
 
                 <!-- Mumyo's Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Mumyo's Mask</td>
 					<td>
 						<span>-</span>
@@ -534,7 +534,7 @@
 				</tr>
 
                 <!-- Old Sage Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Old Sage Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
@@ -545,7 +545,7 @@
 				</tr>
 
                 <!-- Onryoki Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Onryoki Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Onryoki</a>
@@ -557,7 +557,7 @@
 				</tr>
 
                 <!-- Red Kappa Kabuto -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Red Kappa Kabuto</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Red Kappa</a>
@@ -568,7 +568,7 @@
 				</tr>
 
                 <!-- Royal Horned Helm -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Royal Horned Helm</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
@@ -579,7 +579,7 @@
 				</tr>
 
                 <!-- Scampuss Hat -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Scampuss Hat</td>
 					<td>
 						<span>-</span>
@@ -590,7 +590,7 @@
 				</tr>
 
                 <!-- Shuten Doji Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Shuten Doji Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
@@ -604,7 +604,7 @@
 				</tr>
 
                 <!-- Sudama Skull Hat -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Sudama Skull Hat</td>
 					<td>
 						<span>-</span>
@@ -615,7 +615,7 @@
 				</tr>
 
                 <!-- Suwa Myojin Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Suwa Myojin Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Takeda Shingen</a>
@@ -626,7 +626,7 @@
 				</tr>
 
                 <!-- Tengu Visor -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Tengu Visor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Karasu Tengu</a>
@@ -637,7 +637,7 @@
 				</tr>
 
                 <!-- Ungyo Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Ungyo Mask</td>
 					<td>
 						<span>-</span>
@@ -648,7 +648,7 @@
 				</tr>
 
                 <!-- Vengefull Spirit Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Vengefull Spirit Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Mitsume Yazura</a>
@@ -659,7 +659,7 @@
 				</tr>
 
                 <!-- Wild Boar Crest Helmet -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Wild Boar Crest Helmet</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Okabe Motonobu (Axe weilding mini-boss near giant tree)</a>
@@ -670,7 +670,7 @@
 				</tr>
 
                 <!-- White Fox Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>White Fox Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Onmyo Mage</a>
@@ -681,7 +681,7 @@
 				</tr>
 
                 <!-- Woman's Face Mask -->
-				<tr class="">
+				<tr class="even:bg-dark-gray-2">
 					<td>Woman's Face Mask</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Nure-Onna</a>
