Added the href link for the Armor Smithing Text page in smithing_texts_index.html. Added more content to armor_texts.html.

--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -271,7 +271,7 @@
                 Armor Smithing Texts (Button 3)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/armor_texts.html">
                     <img src="./img/armor_icon.png" alt="">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
