Updated weapon_texts.html and DOTSamurai_enemies.txt files. Updated the Armor Smithing Text table to be in alphabetical order in armor_texts.html.

--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -3327,7 +3327,7 @@
 				</tr>
 				<tr>
 					<td>
-						<a class="text-sky-400 hover:text-sky-600" href="">Spider Clan Ninja</a>
+						<a class="text-sky-400 hover:text-sky-600" href="">Tsuchigumo Ninja (Spider Clan Ninja)</a>
 					</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">The Blighted Gate</a>
