--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -727,7 +727,7 @@
                 Table Data
                 ========== -->
                 <!-- Ancient Vestments -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Ancient Vestments</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Nyotengu</a>
@@ -757,7 +757,7 @@
                 </tr>
 
                 <!-- Blessed Sleeve Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Blessed Sleeve Armor</td>
 					<td>
                         <span>-</span>
@@ -779,7 +779,7 @@
 				</tr>
 
                 <!-- Child Of The Sun's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Child Of The Sun's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tokichiro (Dream)</a>
@@ -801,7 +801,7 @@
 				</tr>
 
                 <!-- Demon Horde Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Demon Horde Armor</td>
 					<td>
                         <span>-</span>
@@ -823,7 +823,7 @@
 				</tr>
 
                 <!-- Diehard's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Diehard's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ryomen Sukuna</a>
@@ -850,7 +850,7 @@
 				</tr>
 
                 <!-- Eccentric's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="2">Eccentric's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Enenra</a>
@@ -861,7 +861,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Okuni's Search</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Maeda Keiji</a>
 					</td>
@@ -883,7 +883,7 @@
 				</tr>
 
                 <!-- Gallant Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Gallant Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -906,7 +906,7 @@
 				</tr>
 
                 <!-- Genryu's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Genryu's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
@@ -930,7 +930,7 @@
 				</tr>
 
                 <!-- Greater Good Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Greater Good Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Azai Nagamasa</a>
@@ -953,7 +953,7 @@
 				</tr>
 
                 <!-- Hayabusa Dragon Ninja -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Hayabusa Dragon Ninja</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
@@ -975,7 +975,7 @@
 				</tr>
 
                 <!-- Hyuga Director's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Hyuga Director's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
@@ -1002,7 +1002,7 @@
 				</tr>
 
                 <!-- Imakomei's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Imakomei's Armor</td>
 					<td>
                         <span>-</span>
@@ -1025,7 +1025,7 @@
 				</tr>
 
                 <!-- Kawanami Clan Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Kawanami Clan Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Hachisuka Koroku</a>
@@ -1056,7 +1056,7 @@
                 </tr>
 
                 <!-- Kintaro's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Kintaro's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Sakata Kintoki</a>
@@ -1080,7 +1080,7 @@
 				</tr>
 
                 <!-- Kohoku Mater's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Kohoku Mater's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Azai Nagamasa</a>
@@ -1104,7 +1104,7 @@
 				</tr>
 
                 <!-- Legendary Shogun's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Legendary Shogun's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ancient Otakemaru</a>
@@ -1139,7 +1139,7 @@
                 </tr>
 
                 <!-- Maelfactor's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Maelfactor's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Matsunaga Hisahide</a>
@@ -1162,7 +1162,7 @@
 				</tr>
 
                 <!-- Master Swordsman's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Master Swordsman's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Ashikaga Yoshiteru</a>
@@ -1186,7 +1186,7 @@
 				</tr>
 
                 <!-- Mataza's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Mataza's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
@@ -1228,7 +1228,7 @@
                 </tr>
 
                 <!-- Mighty Monk Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Mighty Monk Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>
@@ -1251,7 +1251,7 @@
 				</tr>
 
                 <!-- Moonprayer Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Moonprayer Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Yamanaka Shikanosuke (Revenant)</a>
@@ -1273,7 +1273,7 @@
 				</tr>
 
                 <!-- One-Eyed Dragon's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="2">One-Eyed Dragon's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
@@ -1282,7 +1282,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">The Blue-Eyed Samurai</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
 					</td>
@@ -1307,7 +1307,7 @@
 				</tr>
 
                 <!-- Onmyo Warrior's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Onmyo Warrior's Armor</td>
 					<td>
                         <span>-</span>
@@ -1329,7 +1329,7 @@
 				</tr>
 
                 <!-- Pit Viper's Garments -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Pit Viper's Garments</td>
 					<td>
                         <span>-</span>
@@ -1351,7 +1351,7 @@
 				</tr>
 
                 <!-- Red Demon Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td rowspan="3">Red Demon Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Kasha</a>
@@ -1362,7 +1362,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">Defiled Sanctuary (Twilight Mission)</a>
 					</td>
 				</tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Lady Osakabe</a>
 					</td>
@@ -1370,7 +1370,7 @@
 						<a class="text-sky-400 hover:text-sky-600" href="">The Golden Castle</a>
 					</td>
                 </tr>
-                <tr>
+                <tr class="bg-dark-gray-2">
                     <td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Shuten Doji</a>
 					</td>
@@ -1394,7 +1394,7 @@
 				</tr>
 
                 <!-- Sanada's Crimson Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Sanada's Crimson Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -1417,7 +1417,7 @@
 				</tr>
 
                 <!-- Shinto Priest's Clothes -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Shinto Priest's Clothes</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Yatsu-no-Kami</a>
@@ -1447,7 +1447,7 @@
 				</tr>
 
                 <!-- Sincere Buddha Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Sincere Buddha Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Usui Sadamitsu</a>
@@ -1469,7 +1469,7 @@
 				</tr>
 
                 <!-- Sohaya Desert Garb -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Sohaya Desert Garb</td>
 					<td>
                         <span>-</span>
@@ -1491,7 +1491,7 @@
 				</tr>
 
                 <!-- Suzuka's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Suzuka's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tate Eboshi</a>
@@ -1513,7 +1513,7 @@
 				</tr>
 
                 <!-- Taira no Kagekiyo's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Taira no Kagekiyo's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Taira no Kagekiyo</a>
@@ -1536,7 +1536,7 @@
 				</tr>
 
                 <!-- The Exceptional One's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>The Exceptional One's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Otakemaru</a>
@@ -1559,7 +1559,7 @@
 				</tr>
 
                 <!-- Tosa Governor's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Tosa Governor's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
@@ -1581,7 +1581,7 @@
 				</tr>
 
                 <!-- Tsuchigumo Attire -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Tsuchigumo Attire</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Tsuchigumo Ninja (Spider Clan Ninja)</a>
@@ -1603,7 +1603,7 @@
 				</tr>
 
                 <!-- Wandering Shrine Maiden -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Wandering Shrine Maiden</td>
 					<td>
 						<span>-</span>
@@ -1626,7 +1626,7 @@
 				</tr>
 
                 <!-- Warrior of the West Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Warrior of the West Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">Daidara Bocchi</a>
@@ -1649,7 +1649,7 @@
 				</tr>
 
                 <!-- Yoshiie's Birthright Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Yoshiie's Birthright Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
@@ -1672,7 +1672,7 @@
 				</tr>
 
                 <!-- Youngblood's Armor -->
-				<tr class="">
+				<tr class="bg-dark-gray-2">
 					<td>Youngblood's Armor</td>
 					<td>
 						<a class="text-sky-400 hover:text-sky-600" href="">William</a>
