Removed skill_icon.png and added hidden_skill_icon.png. Updated the skill icon for the hidden skill button in smithing_texts_index.html. Updated the main logo from skill_icon to hidden_skill_icon .png in hidden_skills.html.

--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -252,7 +252,7 @@
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/hidden_skills.html">
-                    <img src="./img/skill_icon.png" alt="" class="h-[75px] w-auto">
+                    <img src="./img/hidden_skill_icon.png" alt="" class="h-[75px] w-auto">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Hidden Skills</span>
                 </a>
