--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -258,7 +258,7 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Mechanics of "Art of Combat Skills" and "Hidden Skills"</h2>
-            <img src="./img/skill_icon.png" alt="">
+            <img src="./img/hidden_skill_icon.png" alt="">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
