Fixed the heading text in cores_list.html. Updated content in DOTSamurai_enemies.txt.

--- a/nioh2/equipment/soul_cores/cores_list.html
+++ b/nioh2/equipment/soul_cores/cores_list.html
@@ -2155,7 +2155,7 @@
             <!-- ==========
             section header
             ========== -->
-            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Darkness In The Capital (DLC 2) Soul Cores</h2>
+            <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">The First Samurai (DLC 3) Soul Cores</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <button id="sort-button-4" class="sort-button dlc3-table w-full max-w-[250px] py-3 rounded-lg bg-yellow-500 text-xl text-stone-900
