Updated descriptions and comments in lapis_calculation.js. Updated the color of certain text to be Ethereal color in lapis.html.

--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -265,7 +265,8 @@
                 Enemies, and Red Enemies in the Netherscape have a random chance to drop between ~0 - 5 Lapis Lazuli. Purple 
                 enemies have a higher chance to drop more Lapis Lazuli. Bosses in the Crucible have a random chance to drop 
                 around ~5 - 15 Lapis Lazuli (guarenteed to drop Lapis Lazuli). When Lapis Lazuli drops, it will drop as an 
-                Ethereal rarity item. Upon completing the entire table <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a>
+                <span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal rarity</span> 
+                item. Upon completing the entire table <a class="text-sky-400 hover:text-sky-600" href="">Ono no Takamura</a>
                 will reward the player with the <span class="text-red-600 font-bold">Hundred Night Incense Smithing Text</span>.
             </p>
 
