--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -281,7 +281,7 @@
                 Misc Smithing Texts (Button 4)
                 ========== -->
                 <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/misc_texts.html">
                     <img src="./img/misc_smithing_icon.png" alt="">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
