Fixed content in the <head> and <title> elements across various .html files. Fixed formatting across various .js files.

--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nioh 2 Hidden Skills</title>
+    <title>Hidden Skills in Nioh 2</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -14,7 +14,7 @@
     <!-- ========== ========== ==========
     FlowBite CSS
     ========== ========== ========== -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWindCSS Link
