--- a/nioh2/equipment/soul_cores/cores_index.html
+++ b/nioh2/equipment/soul_cores/cores_index.html
@@ -2,9 +2,8 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nioh 2 Soul Cores</title>
+    <title>Soul Cores in Nioh 2</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -15,7 +14,7 @@
     <!-- ========== ========== ==========
     FlowBite CSS
     ========== ========== ========== -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWindCSS Link
