--- a/nioh2/tools/smithing_texts/misc_texts.html
+++ b/nioh2/tools/smithing_texts/misc_texts.html
@@ -15,7 +15,7 @@
     <!-- ========== ========== ==========
     FlowBite CSS
     ========== ========== ========== -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css"  rel="stylesheet">
 
     <!-- ========== ========== ==========
     TailWindCSS Link
