Updated the blessings of the departed table to handle side scrolling for smaller screens, added overflow-x-auto to the class in lapis.html.

--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -285,12 +285,9 @@
     Blessings of the Departed Table
     ========== ========== ========== ========== ========== -->
     <section id="lapis-table" class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded
+        <div class="w-full px-4 py-6 flex flex-col items-center gap-6 rounded overflow-x-auto
             2xl:max-w-section-width lg:px-16">
 
-            <!-- ==========
-            section header
-            ========== -->
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Blessings of the Departed Table</h2>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
@@ -306,6 +303,9 @@
                     <th>Description</th>
                 </tr>
 
+                <!-- ==========
+                Table Data
+                ========== -->
                 <tr class="even:bg-dark-gray-2">
                     <td>Loot +Value Modifier</td>
                     <td>60</td>
